web-frontend/src/app/pages/steps/steps.component.scss
.steps-heading {
  display: flex;
  height: 50px;
  align-items: center;
  h2 {
    margin: 0;
  }
}

#available-steps {
  width: 300px;
  margin-right: 60px;
  > .mat-expansion-panel{
    margin-bottom: 10px;
  }

  .group-panel {
    border: 4px solid rgba(255, 255, 255, 0.5490196078);
  }

  .group-panel.mat-expanded {
    border: 4px solid #ffb9b1;
    .group-header {
      background-color: #ffb9b1
    ;
      border-radius: 0;
    }
  }
}
#scenario-steps {
  width: 600px;
  tr:hover {
    background-color: #ffeeee;
  }

  .scenario-step-item {
    border: 4px solid rgba(255, 255, 255, 0.5490196078);
    ::ng-deep .mat-expansion-panel-body {
      padding: 16px 24px 16px !important;
    }
  }

  .scenario-step-item.mat-expanded {
    border: 4px solid #ffb9b1;
    .mat-expansion-panel-header {
      background-color: #ffb9b1;
      border-radius: 0;
    }
  }
}

#scenario-steps.deactivated {
  pointer-events: none;
}

#available-steps, #scenario-steps {
  .accordion-border {
    width: calc(100% - 20px);
    margin: 0;
  }
  .mat-accordion {
    background: #f0f0f09e;
  }
  .accordion-wrapper {
    overflow-y: auto;
    padding-right: 10px;
    padding-bottom: 5px;
    position: relative;
    height: calc(100% - 55px); //minus header and padding-bottom
  }
}

::ng-deep #available-steps {
  .group-title {
    //font-size: 18px;
    //letter-spacing: 0.8px;
    font-size: 16px;
    text-transform: uppercase;
  }
  .mat-expansion-panel-body {
    padding: 0;
  }
  .available-step-item .mat-expansion-panel-body {
    padding: 0px 10px 20px 24px;
    font-size: 14px;
    .mat-expansion-panel-header-title {
      font-size: 16px;
    }
  }
  mat-expansion-panel {
    width: 100%;
    display: inline-block;
    vertical-align: top;
  }
}

#scenario-steps {
  mat-expansion-panel.active {
    mat-panel-title > div {
      font-weight: 800;
    }
  }

  mat-expansion-panel:not(.active) {
    mat-expansion-panel-header {
      background-color: #f5f5f58c;
    }

    mat-panel-title > div {
      color: gray;
    }
  }
}
.cdk-drag-disabled {
  //background-color: #e7e7e7;
  opacity: 0.5;
  .mat-expansion-panel-header {
    cursor: not-allowed;
  }
}

::ng-deep #scenario-steps {
  .mat-expansion-panel-header, .mat-expansion-panel-header > .mat-content {
    height: 80px;
  }
  .mat-expansion-panel-header-title {
    font-size: 18px;
    min-width: 300px;
    div {
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  .drag-placeholder {
    background: #ccc;
    border: dotted 3px #999;
    min-height: 60px;
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
  }
}

.remove-indicator {
  color: red;
  display: none;
  position: absolute;
  font-size: 3em;
  width: 50px;
  height: 50px;
}

.remove .cdk-drag {
  background-color: #ffcdcd !important;
  .remove-indicator {
    display: block;
  }
}

.available-step-item:not(.cdk-drag-disabled), .scenario-step-item:not(.cdk-drag-disabled) {
  cursor: move;
/*  .mat-expansion-panel-header {
    cursor: move;
  }*/
  table {
    cursor: auto;
  }
}

.step-list {
  border: solid 1px #ccc;
  min-height: 60px;
  border-radius: 4px;
  overflow: hidden;
  display: block;

  .mat-expansion-panel:not(.cdk-drag-disabled) {
    background: #ffffff8c;
  }
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
  0 8px 10px 1px rgba(0, 0, 0, 0.14),
  0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

//.cdk-drag-placeholder {
//  opacity: 0;
//}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.steps-container{
  width: 100%;
  height: calc(100% - 15px);
  display: flex;
  flex-direction: column;
}

.steps-content{
  flex-shrink: 1;
  flex-grow: 1;
  position: relative;
  overflow-y: hidden;
  padding: 10px 16px 0 16px;
  display: flex;
  user-select: none;
}

.steps-footer{
  flex-shrink: 0;
  flex-grow: 0;
  background: white;
  margin-bottom: -15px;
  padding: 15px;
  position: relative;
  border-top: 1px solid #343434;
}

#resize-handle {
  width: 100%;
  height: 3px;
  background-color: #343434;
  position: absolute;
  top: 0;
  left: 0;
  cursor: row-resize;
  display: flex;
  justify-content: center;
  align-items: center;
}

#minimize-log {
  //background-color: white;
  position: absolute;
  right: 20px;
  top: -10px;
  cursor: pointer;
  display: flex;
  span {
    padding: 0 5px;
    margin-right: 5px;
    text-transform: uppercase;
    height: 20px;
    align-self: center;
    //background-color: white;
    background-color: rgba(255, 255, 255, 0.9);
  }
  button {
    border-radius: 2px;
    width: 20px;
    height: 20px;
  }
}

#resize-handle, #minimize-log {
  button {
    background-color: #343434;
    color: white;
    width: 24px;
    height: 24px;
    //cursor: row-resize;
    mat-icon {
      font-size: 20px;
      line-height: 24px;
    }
  }
}

#trashbin {
  position: absolute;
  width: calc(100% - 20px);
  height: 100%;
}

